# cudaflow

./: .gitignore  README.md
.github/workflows/: publish.yml
crates/cuda-interposer/: Cargo.toml
crates/cuda-interposer-build/: Cargo.toml
crates/cuda-interposer-build/src/: lib.rs
crates/cuda-interposer-sys/: Cargo.toml  driver_wrapper-precompile.h  driver_wrapper-precompile.h.pch
crates/cuda-interposer-sys/src/: cupti_helpers.rs  cupti_sys.rs  driver_internal_helpers.rs  driver_internal_sys.rs  driver_sys.rs  lib.rs
crates/cuda-interposer/src/: lib.rs
crates/cust_raw/: Cargo.toml
crates/kernelflow-hooks/: Cargo.toml  log.repocat
crates/kernelflow-hooks/src/: ctor.rs  lib.rs  reexports.rs
crates/kernelflow-hooks/src/hooks/driver/: cuinit.rs  culaunch.rs  mod.rs  procaddr.rs
crates/kernelflow-hooks/tests/: .gitignore  Makefile  audit.c  build.sh  kernel.cu  log.out  run.sh
examples/cuda-init-hook/: Cargo.toml  Makefile
examples/cuda-init-hook/src/: ctor.rs  lib.rs
examples/cuda-init-hook/src/hooks/driver/: cuinit.rs  mod.rs
