[package]
name = "cuda-interposer-sys"
version = "0.12.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Low level bindings to the CUDA Driver API. Adopted from cust-raw crate from the Rust-GPU project. https://github.com/Rust-GPU/rust-cuda"
links = "cuda"
build = "build/main.rs"
repository = "https://github.com/SamKG/cudaflow"

[build-dependencies]
bindgen = "0.72.1"
bimap = "0.6.3"
cc = "1.2.52"
doxygen-bindgen = "0.1"

[package.metadata.docs.rs]
features = [
    "driver",
    "cupti",
    "runtime",
    "cublas",
    "cublaslt",
    "cublasxt",
    "cudnn",
    "nvptx-compiler",
    "nvvm",
]

[features]
default = ["driver"]
driver = []
runtime = []
cublas = []
cublaslt = []
cublasxt = []
cudnn = []
nvptx-compiler = []
nvvm = []
cupti = []
