[package]
name = "kernelflow_hooks"
version = "0.1.0"
edition = "2024"
build = "build/main.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
cust_raw = { version = "0.11.3", path = "../cust_raw" }
libloading = "0.9.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
lazy_static = "1.5.0"
libc = "0.2.180"
paste = "1.0.15"
tracing = "0.1.44"
ctor = "0.6.3"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
serde_bytes = "0.11.19"
rand = "0.9.2"

[build-dependencies]
anyhow = "1.0.100"
once_cell = "1.21.3"
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24.0"
walkdir = "2.5.0"
cust_raw = { version = "0.11.3", path = "../cust_raw" }
