[package]
name = "cuda_init_hook"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
libloading = "0.9.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
lazy_static = "1.5.0"
libc = "0.2.180"
paste = "1.0.15"
tracing = "0.1.44"
ctor = "0.6.3"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
serde_bytes = "0.11.19"
rand = "0.9.2"
cuda-interposer = {  path = "../../crates/cuda-interposer" }
cuda-interposer-sys = {  path = "../../crates/cuda-interposer-sys" }

[build-dependencies]
anyhow = "1.0.100"
cuda-interposer-build = { path = "../../crates/cuda-interposer-build" }
cuda-interposer-sys = { path = "../../crates/cuda-interposer-sys" }
